<resources>
    <string name="app_name">WorkinUQAC</string>
    <string name="createProfileButton">Créer mon profil</string>
    <string name="identifyProfileButton">M\'identifier</string>
    <string name="edtText">Mes cours</string>
    <string name="pictureButton">Changer ma photo</string>
    <string name="usersButton">Chercher un utilisateur</string>
    <string name="deconnectionButton">Déconnexion</string>
    <string name="conversationsButton">Mes conversations</string>
    <string name="statusText">...purring on the blanket</string>
    <string name="name_profile">Meow le Sublime</string>
    <string name="inscription_layout">INSCRIPTION</string>
    <string name="inscription_code">Ton code permanent (ton identifiant de connection) : </string>
    <string name="inscription_name">Ton nom : </string>
    <string name="inscription_email">Ton adresse-mail : </string>
    <string name="inscription_mdp">Ton mot de passe : </string>
    <string name="inscription_mdp_confirm">Confirmation de ton mot de passe : </string>
    <string name="inscription_button">T\'inscrire</string>

    <string name="edit_layout">INFORMATIONS</string>
    <string name="edit_name">Ton nom : </string>
    <string name="edit_email">Ton adresse-mail : </string>
    <string name="edit_status">Ton status : </string>
    <string name="edit_mdp">Ton mot de passe : </string>
    <string name="edit_mdp_confirm">Confirmation de ton mot de passe : </string>
    <string name="edit_picture">Ta photo : </string>
    <string name="edit_picture_button">Choisir un fichier</string>


    <string name="edt_students_button">Liste des participants</string>

    <string name="debug">Fallait pas s\'attendre à des miracles</string>
    <string name="searchSentence">Chercher un étudiant, un cours...</string>
    <string name="contactText">Contact</string>
    <string name="studentEdtText">Cours</string>

    <string name="dialogName">Entre ton code permanent</string>
    <string name="dialogMdp">Entre ton mot de passe</string>
    <string name="Validate">Valider</string>
    <string name="Cancel">Annuler</string>
    <string name="CodePermanent">Entrez votre code permanent</string>


    <string name="edt_remove_button">Supprimer cours</string>
    <string name="addClassButton">Ajouter un cours</string>

</resources>
