<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
        android:id="@+id/DialogName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialogName"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/DialogPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialogMdp"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/DialogValidateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Validate" />

        <Button
            android:id="@+id/DialogCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel" />
    </LinearLayout>

</LinearLayout>
