<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_layout"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_name" />

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:tag="nameLayout">

        </LinearLayout>

        <TextView
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_email" />

        <LinearLayout
            android:id="@+id/mailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:tag="mailLayout"></LinearLayout>

        <TextView
            android:id="@+id/mdpEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_mdp" />

        <LinearLayout
            android:id="@+id/mdpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:tag="mdpLayout"></LinearLayout>

        <TextView
            android:id="@+id/pictureText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_picture" />

        <ImageView
            android:id="@+id/pictureEditImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/profile_picture_default" />

        <Button
            android:id="@+id/pictureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_picture_button" />

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/validateEditButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:foreground="@android:drawable/ic_menu_send" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/cancelEditButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:foreground="@android:drawable/ic_menu_close_clear_cancel" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>