<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="false"
            android:layout_margin="15dp"
            android:clickable="false"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile_picture_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/name_profile"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold"
                android:verticalScrollbarPosition="defaultPosition" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:padding="5dp"
                android:text="@string/contactText"
                android:textAllCaps="false"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textEdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:padding="5dp"
                android:text="@string/studentEdtText"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/edtViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp" />

    </LinearLayout>
</ScrollView>